# erath-node

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
scripts/: copy.sh  setup.sh
src/: deployer.rs  main.rs
src/compiled_contracts/: AdminFacet.json  DiamondInit.json  DiamondProxy.json  ExecutorFacet.json  GettersFacet.json  MailboxFacet.json  Verifier.json
