[package]
name = "erath-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "erath-node"
path = "src/main.rs"

[[bin]]
name = "deployer"
path = "src/deployer.rs"


[dependencies]

reth = {git = "https://github.com/paradigmxyz/reth", rev="0977249e6476ee3dd463fe4ffdfc756bde869a19" }
reth-transaction-pool = {git = "https://github.com/paradigmxyz/reth", rev="0977249e6476ee3dd463fe4ffdfc756bde869a19" }
jsonrpsee = { version = "0.20" }

eyre = "0.6"
clap = "4"

#era_test_node = { git = "https://github.com/matter-labs/era-test-node.git", rev = "d6ad110cb069be76238a2def7f80b53276451033" }
era_test_node = { path = "../era-test-node-reth" }
jsonrpc-core = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }

anyhow = "1.0"
tokio = { version = "1", features = ["time", "rt"] }
futures = { version = "0.3", features = ["compat"] }
once_cell = "1.7"
jsonrpc-http-server = { git = "https://github.com/matter-labs/jsonrpc.git", branch = "master" }


ethers = "2.0"
serde = "1.0"
serde_json = "1.0"
hex = "0.4"

[patch.crates-io]
packed_simd = { path = "../packed_simd" }

[patch."https://github.com/matter-labs/era-boojum.git"]
boojum = { path = "../era-boojum" }

[patch."https://github.com/matter-labs/snark-wrapper.git"]
snark_wrapper = { path = "../snark-wrapper" }


[profile.dev]
debug = 0